--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,39 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, serif;
 
 }
+#header {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+#scoreBar {
+    width: 40rem;
+    height: 4rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#welcome {
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+#welcome button{
+    width: 8rem;
+    height: 2rem;
+    border-radius: 10px;
+    background: none;
+    color: rgb(25, 25, 25);
+    font-weight: 600;
+    border: 2px solid gray;
+    cursor: pointer;
+    outline: none;
+}
 
 main{
     width: 100%;
@@ -28,7 +61,7 @@ main{
     width: 40rem;
     height: 30rem;
     background-color: rgba(211, 211, 211, 0.61);
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
@@ -72,12 +105,13 @@ main{
     justify-content: space-around;
 }
 
-.game-options-container span{
+.game-options-container button{
     width: 45%;
     height: 3rem;
     border: 2px solid darkgray;
     border-radius: 20px;
     overflow: hidden;
+    cursor: crosshair;
 }
 
 .next-button-container button{
