--- a/assets/style.css
+++ b/assets/style.css
@@ -129,12 +129,17 @@ main{
     width: 8rem;
     height: 2rem;
     border-radius: 10px;
-    background: none;
+    background-color: rgba(255, 255, 255, 0);
     color: rgb(25, 25, 25);
     font-weight: 600;
     border: 2px solid gray;
     cursor: pointer;
     outline: none;
+    transition: 0.5s;
+}
+
+.abort-button-container button:hover {
+    background-color: rgba(255, 0, 0, 0.556);
 }
 
 #game-summary {
