--- a/assets/style.css
+++ b/assets/style.css
@@ -39,12 +39,17 @@ body{
     width: 10rem;
     height: 2.5rem;
     border-radius: 10px;
-    background: none;
+    background-color: rgba(255, 255, 255, 0);
     color: rgb(25, 25, 25);
     font-weight: 600;
     border: 2px solid gray;
     cursor: pointer;
     outline: none;
+    transition: 0.5s;
+}
+
+#welcome button:hover {
+    background-color: rgba(82, 255, 47, 0.5);
 }
 
 #full-timer {
@@ -139,7 +144,7 @@ main{
 }
 
 .abort-button-container button:hover {
-    background-color: rgba(255, 0, 0, 0.556);
+    background-color: rgba(255, 0, 0, 0.5);
 }
 
 #game-summary {
